--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="flipper">
+                <div class="fronttodo">
+                    
+                </div>
+            </div>
+        </div>
+
     </div>
     <script src="index.js"></script>
 </body>
