--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     </div>
                 </div>
                 <div class="back">
-                    <p>Life <em style="color: burlywood;">turn the tables</em> to solve your problems—
+                    <p><em>Uncertainty</em> grows as when thoughts battle
                     </p>
-                    <p>So, don’t be stucked on the <em style="color: rgb(255, 64, 0);">wrong side.</em>
+                    <p style="color: burlywood;">One clear calculation ends the <em>rattle</em>
                     </p>
                 </div>
             </div>
@@ -117,6 +117,7 @@
         </div>
 
     </div>
+    <script src="config.js"></script>
     <script src="index.js"></script>
 </body>
 
