partial light mode added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <nav>
-        theToolQuote
+       <div class="head">theToolQuote</div>
+       <div class="mode"><img src="night-mode.png" alt="night mode"></div>
     </nav>
     <div class="main">
 
