--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 
         <div class="container" id="weatherContainerWrapper">
             <div class="flipper">
-                <!-- FRONT: quote -->
-                <div class="front" style="align-items: center; justify-content: center; font-size: 2.6rem; text-align: center;background: rgba(22, 27, 34, 0.85);
+                <div class="back" style="align-items: center; justify-content: center; font-size: 2.6rem; text-align: center;background: rgba(22, 27, 34, 0.85);
     border: 1px solid #30363d;">
                     <p style="color: rgb(255, 255, 255);">Cloudy days remind us that <em>clarity</em> always returns —
                     </p>
                     <p style="color: burlywood">The sun only waits,<em> never disappears.</em></p>
                 </div>
 
-                <div class="back" id="weatherBack">
+                <div class="front" id="weatherBack">
                     <div class="weather-ui">
                         <div class="weather-head">
                             <div class="loc">Detecting location…</div>
